--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,13 +1,12 @@
 <header role="banner">
-	<p class="logo"><a href="{{ site.url }}">{{ site.title }}</a></p>
+	<a href="{{ site.url }}" class="logo">{{ site.title }}</a>
 	<nav>
-		<ul>
-			{% for page in site.pages %}
-			{% if page.title %}
-			<li><a href="{{ page.url }}">{{ page.title }}</a></li>
-			{% endif %}
-			{% endfor %}
-			<li><a href="{{ site.github_url }}">GitHub</a></li>
-		</ul>
+		{% for page in site.pages %}
+		{% if page.title %}
+		<a href="{{ page.url }}">{{ page.title }}</a>
+		{% endif %}
+		{% endfor %}
+		<a href="{{ site.github_url }}">GitHub</a>
 	</nav>
 </header>
+<hr />
