--- a/_includes/entry-list/recent.html
+++ b/_includes/entry-list/recent.html
@@ -1,5 +1,5 @@
 <section>
-    <h1>Entries</h1>
+    <h1>Some Recent Entries</h1>
     <ol>
         {% for post in site.posts limit:10 %}
         <li>
