--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header role="banner">
-	<a href="{{ site.url }}" class="logo">{{ site.title }}</a>
+	<a href="/" class="logo">{{ site.title }}</a>
 	<nav>
 		{% for page in site.pages %}
 		{% if page.title %}
