--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <hr>
 <footer role="contentinfo">
 	<p>All Content Licensed Under GPL &emdash; Your Welcome.</p>
-	<p class="logo"><a href="#">Ellioseven</a></p>
+	<a href="/" class="logo">Ellioseven</a>
 </footer>
