--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <hr>
 <footer role="contentinfo">
-	<p>All Content Licensed Under GPL. Your Welcome.</p>
+	<p>All Content Licensed Under GPL. Your're welcome.</p>
 	<a href="/" class="logo">Ellioseven</a>
 </footer>
