--- a/css/theme.css
+++ b/css/theme.css
@@ -192,7 +192,7 @@ nav a {
     margin-bottom: 1em;
     padding: 1em;
     font-size: 85%;
-    border: 1px solid #ccc;
+    border: none;
 }
 
 .highlight pre {
@@ -207,60 +207,60 @@ nav a {
 }
 
 .highlight .hll {
-    background-color: #d6d6d6
+    background-color: #373b41
 }
 
 .highlight {
-    background: #ffffff;
-    color: #4d4d4c
+    background: #1d1f21;
+    color: #c5c8c6
 }
 
 .highlight .c {
-    color: #8e908c
+    color: #969896
 }
 
 .highlight .err {
-    color: #c82829
+    color: #cc6666
 }
 
 .highlight .k {
-    color: #8959a8
+    color: #b294bb
 }
 
 .highlight .l {
-    color: #f5871f
+    color: #de935f
 }
 
 .highlight .n {
-    color: #4d4d4c
+    color: #c5c8c6
 }
 
 .highlight .o {
-    color: #3e999f
+    color: #8abeb7
 }
 
 .highlight .p {
-    color: #4d4d4c
+    color: #c5c8c6
 }
 
 .highlight .cm {
-    color: #8e908c
+    color: #969896
 }
 
 .highlight .cp {
-    color: #8e908c
+    color: #969896
 }
 
 .highlight .c1 {
-    color: #8e908c
+    color: #969896
 }
 
 .highlight .cs {
-    color: #8e908c
+    color: #969896
 }
 
 .highlight .gd {
-    color: #c82829
+    color: #cc6666
 }
 
 .highlight .ge {
@@ -268,16 +268,16 @@ nav a {
 }
 
 .highlight .gh {
-    color: #4d4d4c;
+    color: #c5c8c6;
     font-weight: bold
 }
 
 .highlight .gi {
-    color: #718c00
+    color: #b5bd68
 }
 
 .highlight .gp {
-    color: #8e908c;
+    color: #969896;
     font-weight: bold
 }
 
@@ -286,186 +286,186 @@ nav a {
 }
 
 .highlight .gu {
-    color: #3e999f;
+    color: #8abeb7;
     font-weight: bold
 }
 
 .highlight .kc {
-    color: #8959a8
+    color: #b294bb
 }
 
 .highlight .kd {
-    color: #8959a8
+    color: #b294bb
 }
 
 .highlight .kn {
-    color: #3e999f
+    color: #8abeb7
 }
 
 .highlight .kp {
-    color: #8959a8
+    color: #b294bb
 }
 
 .highlight .kr {
-    color: #8959a8
+    color: #b294bb
 }
 
 .highlight .kt {
-    color: #eab700
+    color: #f0c674
 }
 
 .highlight .ld {
-    color: #718c00
+    color: #b5bd68
 }
 
 .highlight .m {
-    color: #f5871f
+    color: #de935f
 }
 
 .highlight .s {
-    color: #718c00
+    color: #b5bd68
 }
 
 .highlight .na {
-    color: #4271ae
+    color: #81a2be
 }
 
 .highlight .nb {
-    color: #4d4d4c
+    color: #c5c8c6
 }
 
 .highlight .nc {
-    color: #eab700
+    color: #f0c674
 }
 
 .highlight .no {
-    color: #c82829
+    color: #cc6666
 }
 
 .highlight .nd {
-    color: #3e999f
+    color: #8abeb7
 }
 
 .highlight .ni {
-    color: #4d4d4c
+    color: #c5c8c6
 }
 
 .highlight .ne {
-    color: #c82829
+    color: #cc6666
 }
 
 .highlight .nf {
-    color: #4271ae
+    color: #81a2be
 }
 
 .highlight .nl {
-    color: #4d4d4c
+    color: #c5c8c6
 }
 
 .highlight .nn {
-    color: #eab700
+    color: #f0c674
 }
 
 .highlight .nx {
-    color: #4271ae
+    color: #81a2be
 }
 
 .highlight .py {
-    color: #4d4d4c
+    color: #c5c8c6
 }
 
 .highlight .nt {
-    color: #3e999f
+    color: #8abeb7
 }
 
 .highlight .nv {
-    color: #c82829
+    color: #cc6666
 }
 
 .highlight .ow {
-    color: #3e999f
+    color: #8abeb7
 }
 
 .highlight .w {
-    color: #4d4d4c
+    color: #c5c8c6
 }
 
 .highlight .mf {
-    color: #f5871f
+    color: #de935f
 }
 
 .highlight .mh {
-    color: #f5871f
+    color: #de935f
 }
 
 .highlight .mi {
-    color: #f5871f
+    color: #de935f
 }
 
 .highlight .mo {
-    color: #f5871f
+    color: #de935f
 }
 
 .highlight .sb {
-    color: #718c00
+    color: #b5bd68
 }
 
 .highlight .sc {
-    color: #4d4d4c
+    color: #c5c8c6
 }
 
 .highlight .sd {
-    color: #8e908c
+    color: #969896
 }
 
 .highlight .s2 {
-    color: #718c00
+    color: #b5bd68
 }
 
 .highlight .se {
-    color: #f5871f
+    color: #de935f
 }
 
 .highlight .sh {
-    color: #718c00
+    color: #b5bd68
 }
 
 .highlight .si {
-    color: #f5871f
+    color: #de935f
 }
 
 .highlight .sx {
-    color: #718c00
+    color: #b5bd68
 }
 
 .highlight .sr {
-    color: #718c00
+    color: #b5bd68
 }
 
 .highlight .s1 {
-    color: #718c00
+    color: #b5bd68
 }
 
 .highlight .ss {
-    color: #718c00
+    color: #b5bd68
 }
 
 .highlight .bp {
-    color: #4d4d4c
+    color: #c5c8c6
 }
 
 .highlight .vc {
-    color: #c82829
+    color: #cc6666
 }
 
 .highlight .vg {
-    color: #c82829
+    color: #cc6666
 }
 
 .highlight .vi {
-    color: #c82829
+    color: #cc6666
 }
 
 .highlight .il {
-    color: #f5871f
+    color: #de935f
 }
