--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,6 @@
 	<meta name="viewport" content="width=device-width initial-scale=1">
 	<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 	<meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-	<link rel="stylesheet" href="{{ "/css/theme.css" | prepend: site.url }}">
+	<link rel="stylesheet" href="/css/theme.css">
 	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
 </head>
