--- a/css/theme.css
+++ b/css/theme.css
@@ -3,7 +3,7 @@
 html,
 body {
     color: #444;
-    line-height: 1.6;
+    line-height: 1.4;
 }
 
 @media (min-width: 50em) {
@@ -17,7 +17,7 @@ body {
 html,
 body,
 code {
-    font-family: monospace;
+    font-family: serif;
 }
 
 body {
@@ -33,41 +33,17 @@ h3,
 h4,
 h5,
 h6 {
-    font-size: inherit;
-    line-height: inherit;
-}
-
-h1:before {
-    content: "# ";
-}
-
-h2:before {
-    content: "## ";
-}
-
-h3:before {
-    content: "### ";
-}
-
-h4:before {
-    content: "#### "
-}
-
-h5:before {
-    content: "###### "
-}
-
-h6:before {
-    content: "####### "
+    font-family: sans-serif;
 }
 
 a {
+    color: #1e90ff;
     font-weight: 700;
 }
 
 a:hover,
 a:focus {
-    color: red;
+    color: #CF000F;
 }
 
 strong:before,
@@ -80,7 +56,16 @@ em:after {
     content: "__"
 }
 
+pre,
+code {
+    font-family: monospace;
+}
+
 pre {
+    padding-top: 1em;
+    padding-bottom: 1em;
+    border-top: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
     overflow: auto;
 }
 
@@ -89,8 +74,8 @@ pre code {
 }
 
 code {
-    font-weight: 600;
-    color: red;
+    color: #e65722;
+    font-weight: 700;
 }
 
 ul {
@@ -114,14 +99,9 @@ blockquote > *:before {
     content: "> ";
 }
 
-hr:before {
-    content: "---";
-    margin: auto;
-    width: auto;
-    display: block;
-}
-
 hr {
+    height: 1px;
+    background: #ddd;
     border: none;
     line-height: 1;
 }
@@ -161,11 +141,13 @@ header[role="banner"] .logo {
 
 nav a {
     margin-right: .5em;
+    font-family: monospace;
 }
 
 /* Logo */
 
 .logo {
+    font-family: monospace;
     font-weight: bold;
     text-transform: uppercase;
     color: inherit;
@@ -178,287 +160,15 @@ nav a {
 
 /* Highlight */
 
-.highlight {
-    margin-top: 1em;
-    margin-bottom: 1em;
-    font-size: 95%;
-}
-
-@media (min-width: 50em) {
-    .highlight {
-        margin: 2em -20%;
-    }
-}
-
 .highlight pre {
-    font-weight: normal;
-    margin: 0;
-    color: #c5c8c6;
-    background: #1d1f21;
-    overflow: auto;
+    padding: 1em;
+    background-color: #f7f7f7;
 }
 
 .highlight code {
-    padding: 2em;
     color: inherit;
-    font-weight: normal;
 }
 
-.highlight .hll {
-    background-color: #373b41
-}
-
-.highlight .c {
-    color: #969896
-}
-
-.highlight .err {
-    color: #cc6666
-}
-
-.highlight .k {
-    color: #b294bb
-}
-
-.highlight .l {
-    color: #de935f
-}
-
-.highlight .n {
-    color: #c5c8c6
-}
-
-.highlight .o {
-    color: #8abeb7
-}
-
-.highlight .p {
-    color: #c5c8c6
-}
-
-.highlight .cm {
-    color: #969896
-}
-
-.highlight .cp {
-    color: #969896
-}
-
-.highlight .c1 {
-    color: #969896
-}
-
-.highlight .cs {
-    color: #969896
-}
-
-.highlight .gd {
-    color: #cc6666
-}
-
-.highlight .ge {
-    font-style: italic
-}
-
-.highlight .gh {
-    color: #c5c8c6;
-    font-weight: bold
-}
-
-.highlight .gi {
-    color: #b5bd68
-}
-
-.highlight .gp {
-    color: #969896;
-    font-weight: bold
-}
-
-.highlight .gs {
-    font-weight: bold
-}
-
-.highlight .gu {
-    color: #8abeb7;
-    font-weight: bold
-}
-
-.highlight .kc {
-    color: #b294bb
-}
-
-.highlight .kd {
-    color: #b294bb
-}
-
-.highlight .kn {
-    color: #8abeb7
-}
-
-.highlight .kp {
-    color: #b294bb
-}
-
-.highlight .kr {
-    color: #b294bb
-}
-
-.highlight .kt {
-    color: #f0c674
-}
-
-.highlight .ld {
-    color: #b5bd68
-}
-
-.highlight .m {
-    color: #de935f
-}
-
-.highlight .s {
-    color: #b5bd68
-}
-
-.highlight .na {
-    color: #81a2be
-}
-
-.highlight .nb {
-    color: #c5c8c6
-}
-
-.highlight .nc {
-    color: #f0c674
-}
-
-.highlight .no {
-    color: #cc6666
-}
+/* https://raw.githubusercontent.com/jwarby/pygments-css/master/autumn.css */
 
-.highlight .nd {
-    color: #8abeb7
-}
-
-.highlight .ni {
-    color: #c5c8c6
-}
-
-.highlight .ne {
-    color: #cc6666
-}
-
-.highlight .nf {
-    color: #81a2be
-}
-
-.highlight .nl {
-    color: #c5c8c6
-}
-
-.highlight .nn {
-    color: #f0c674
-}
-
-.highlight .nx {
-    color: #81a2be
-}
-
-.highlight .py {
-    color: #c5c8c6
-}
-
-.highlight .nt {
-    color: #8abeb7
-}
-
-.highlight .nv {
-    color: #cc6666
-}
-
-.highlight .ow {
-    color: #8abeb7
-}
-
-.highlight .w {
-    color: #c5c8c6
-}
-
-.highlight .mf {
-    color: #de935f
-}
-
-.highlight .mh {
-    color: #de935f
-}
-
-.highlight .mi {
-    color: #de935f
-}
-
-.highlight .mo {
-    color: #de935f
-}
-
-.highlight .sb {
-    color: #b5bd68
-}
-
-.highlight .sc {
-    color: #c5c8c6
-}
-
-.highlight .sd {
-    color: #969896
-}
-
-.highlight .s2 {
-    color: #b5bd68
-}
-
-.highlight .se {
-    color: #de935f
-}
-
-.highlight .sh {
-    color: #b5bd68
-}
-
-.highlight .si {
-    color: #de935f
-}
-
-.highlight .sx {
-    color: #b5bd68
-}
-
-.highlight .sr {
-    color: #b5bd68
-}
-
-.highlight .s1 {
-    color: #b5bd68
-}
-
-.highlight .ss {
-    color: #b5bd68
-}
-
-.highlight .bp {
-    color: #c5c8c6
-}
-
-.highlight .vc {
-    color: #cc6666
-}
-
-.highlight .vg {
-    color: #cc6666
-}
-
-.highlight .vi {
-    color: #cc6666
-}
-
-.highlight .il {
-    color: #de935f
-}
+.highlight .sd { color: #aaaaaa } /* Literal.String.Doc */
