--- a/css/theme.css
+++ b/css/theme.css
@@ -2,7 +2,7 @@
 
 html,
 body {
-    color: #444;
+    color: #111;
     line-height: 1.4;
 }
 
@@ -10,7 +10,7 @@ body {
 
     html,
     body {
-        font-size: 107.5%;
+        font-size: 115%;
     }
 }
 
@@ -73,6 +73,7 @@ pre {
 
 pre code {
     display: block;
+    font-weight: inherit;
 }
 
 code {
@@ -134,21 +135,17 @@ header[role="banner"] .logo {
 
 nav a {
     margin-right: .5em;
-    font-family: monospace;
+    font-family: sans-serif;
+    font-weight: bold;
 }
 
 /* Logo */
 
 .logo {
-    font-family: monospace;
+    font-family: sans-serif;
     font-weight: bold;
-    text-transform: uppercase;
     color: inherit;
     text-decoration: none;
-}
-
-.logo:after {
-    content: "(){}";
 }
 
 /* Highlight */
