--- a/css/theme.css
+++ b/css/theme.css
@@ -158,6 +158,12 @@ nav a {
     text-decoration: none;
 }
 
+main[role="main"] > article img {
+    box-shadow: 0 0 4px 0 #d0d0d0;
+    border-radius: 2px;
+    display: block;
+}
+
 /* Highlight */
 
 .highlight {
