--- a/css/theme.css
+++ b/css/theme.css
@@ -1,7 +1,5 @@
 /* Global */
 
-@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:700|Roboto:400,400i,700,700i');
-
 html,
 body {
     color: #111;
@@ -11,7 +9,7 @@ body {
 html,
 body,
 code {
-    font-family: "Roboto", serif;
+    font-family: sans-serif;
 }
 
 body {
@@ -38,7 +36,7 @@ a:focus {
 
 pre,
 code {
-    font-family: "Roboto Mono", monospace;
+    font-family: monospace;
 }
 
 pre {
@@ -59,15 +57,15 @@ pre {
     }
 }
 
-pre code {
-    display: block;
-    font-size: .75em;
-    background-color: transparent;
-}
-
 code {
     color: #e65722;
     font-weight: 700;
+}
+
+pre code {
+    display: block;
+    font-weight: 400;
+    background-color: transparent;
 }
 
 a code {
@@ -103,7 +101,7 @@ footer[role="contentinfo"],
 header[role="banner"] + hr,
 main[role="main"] + hr,
 footer[role="contentinfo"] + hr {
-    max-width: 30em;
+    max-width: 40em;
     margin: 2em auto;
     padding-left: 1em;
     padding-right: 1em;
@@ -145,14 +143,12 @@ header[role="banner"] .logo:before {
 
 nav a {
     margin-right: .5em;
-    font-family: sans-serif;
     font-weight: bold;
 }
 
 /* Logo */
 
 .logo {
-    font-family: sans-serif;
     font-weight: bold;
     color: inherit;
     text-decoration: none;
