Minor content additions

--- a/_includes/portfolio-client.html
+++ b/_includes/portfolio-client.html
@@ -2,6 +2,7 @@
     <h2>Client Solutions</h2>
     <section>
         <h3>Digital Garden</h3>
+        <p>I worked on the following projects whilst employed at <a href="https://digitalgarden.com.au">Digital Garden</a>:</p>
         <ul>
             <li>
                 <p><a href="http://www.msf.org.au/">Médecins Sans Frontières (Doctors Without Borders)</a></p>
