--- a/_includes/portfolio-projects.html
+++ b/_includes/portfolio-projects.html
@@ -1,10 +1,14 @@
 <div class="portfolio">
-    <h2>Projects</h2>
+    <h2>Open Source Projects</h2>
     <section>
         <ul>
             <li>
-                <p><a href="https://github.com/ellioseven/titus">Titus</a></p>
+                <p><a href="https://www.drupal.org/project/titus">Titus</a></p>
                 <p>A better Drupal 8 administration theme.</p>
+            </li>
+            <li>
+                <p><a href="https://www.drupal.org/project/context_layout">Context Layout</a></p>
+                <p>Integrates layout functionality with the <a href="https://www.drupal.org/project/context">context</a> module.</p>
             </li>
             <li>
                 <p><a href="https://github.com/ellioseven/docker-image-templating-system">Docker Image Templating System</a></p>
