--- a/_includes/copyright.html
+++ b/_includes/copyright.html
@@ -1,3 +1,4 @@
 <div class="copyright">
-    <p>&copy; {{ 'now' | date: "%Y" }} ellioseven — Drupal &amp; DevOps development.</p>
+    <p>&copy; {{ 'now' | date: "%Y" }} <strong>ellioseven</strong>.</p>
+    <p>Independent Drupal Architect &amp; Developer based in Sydney, Australia.</p>
 </div>
