--- a/_includes/hero-about.html
+++ b/_includes/hero-about.html
@@ -1,4 +1,4 @@
 <div class="hero">
-    <h1>I'm a Drupal Developer based in Sydney, Australia.</h1>
-    <p>I provide full stack Drupal services for organisations everywhere. If you have a Drupal project that needs a helping hand, <a href="mailto:hello@ellioseven.com">let's talk</a>.</p>
+    <h1>I'm an Independent Drupal Architect &amp; Developer Based in Sydney, Australia.</h1>
+    <p>I provide Drupal services for agencies. If you have a Drupal project that needs a helping hand, <a href="mailto:hello@ellioseven.com">let's talk</a>.</p>
 </div>
