--- a/_scss/components/_brand.scss
+++ b/_scss/components/_brand.scss
@@ -1,15 +1,19 @@
 .brand {
   @include type-leader;
   @include type-leader-clear;
-  background: url('/img/logo.svg');
-  background-size: cover;
-  height: em(22px);
-  overflow: hidden;
-  text-align: left;
-  text-indent: -999999px;
-  width: em(100px);
-  @include breakpoint($breakpoint-large) {
-    height: em(28px);
-    width: em(122px);
+
+  a {
+    background: url('/img/logo.svg');
+    background-size: cover;
+    display: block;
+    height: em(22px);
+    overflow: hidden;
+    text-align: left;
+    text-indent: -999999px;
+    width: em(100px);
+    @include breakpoint($breakpoint-large) {
+      height: em(28px);
+      width: em(122px);
+    }
   }
 }
