Let's make things look nicer

--- a/_includes/hero-about.html
+++ b/_includes/hero-about.html
@@ -1,4 +1,9 @@
 <div class="hero">
-    <h1>I'm an Independent Drupal Architect &amp; Developer Based in Sydney, Australia.</h1>
-    <p>I provide Drupal services for agencies. If you have a Drupal project that needs a helping hand, <a href="mailto:hello@ellioseven.com">let's talk</a>.</p>
+    <section>
+        <h1>I'm an Independent Drupal Architect &amp; Developer Based in Sydney, Australia.</h1>
+        <p>I provide Drupal services for agencies. If you have a Drupal project that needs a helping hand, <a href="mailto:hello@ellioseven.com">let's talk</a>.</p>
+    </section>
+    <section>
+        <img src="/img/portrait.jpg" alt="Elliot Mitchum">
+    </section>
 </div>
