--- a/_scss/components/_header.scss
+++ b/_scss/components/_header.scss
@@ -1,6 +1,6 @@
 .header {
   @include pie-clearfix;
-  border-bottom: 2px solid $color-grey-cement;
+  border-bottom: 1px solid $color-grey-cloud;
   padding: em($base-vertical-margin);
   position: relative;
 
