--- a/_includes/navigation-main.html
+++ b/_includes/navigation-main.html
@@ -3,10 +3,12 @@
     <section>
         <ul>
             {% for item in site.pages %}
-                {% if page.url == item.url %}
-                    <li class="is-active"><a href="{{ item.url }}">{{ item.title }}</a></li>
-                {% else %}
-                    <li><a href="{{ item.url }}">{{ item.title }}</a></li>
+                {% if item.title %}
+                    {% if page.url == item.url %}
+                        <li class="is-active"><a href="{{ item.url }}">{{ item.title }}</a></li>
+                    {% else %}
+                        <li><a href="{{ item.url }}">{{ item.title }}</a></li>
+                    {% endif %}
                 {% endif %}
             {% endfor %}
             <li class="is-callout"><a href="mailto:hello@ellioseven.com">Let's Talk</a></li>
