--- a/_includes/menu-site.html
+++ b/_includes/menu-site.html
@@ -2,10 +2,12 @@
     <h6>Menu</h6>
     <ul>
         {% for item in site.pages %}
-            {% if page.url == item.url %}
-                <li class="is-active"><a href="{{ item.url }}">{{ item.title }}</a></li>
-            {% else %}
-                <li><a href="{{ item.url }}">{{ item.title }}</a></li>
+            {% if item.title %}
+                {% if page.url == item.url %}
+                    <li class="is-active"><a href="{{ item.url }}">{{ item.title }}</a></li>
+                {% else %}
+                    <li><a href="{{ item.url }}">{{ item.title }}</a></li>
+                {% endif %}
             {% endif %}
         {% endfor %}
         <li><a href="mailto:hello@ellioseven.com">Let's Talk</a></li>
