--- a/_scss/base/_code.scss
+++ b/_scss/base/_code.scss
@@ -10,6 +10,15 @@ code {
   color: $color-red-royal;
   display: inline-block;
   font-weight: 700;
+
+  h1 &,
+  h2 &,
+  h3 &,
+  h4 &,
+  h5 &,
+  h6 & {
+    color: inherit;
+  }
 }
 
 pre {
