--- a/_includes/copyright.html
+++ b/_includes/copyright.html
@@ -1,4 +1,4 @@
 <div class="copyright">
     <p>&copy; {{ 'now' | date: "%Y" }} <strong>ellioseven</strong>.</p>
-    <p>Independent Drupal Architect &amp; Developer based in Sydney, Australia.</p>
+    <p>Independent Full stack engineer & architect based in Sydney, Australia.</p>
 </div>
