--- a/_scss/app.scss
+++ b/_scss/app.scss
@@ -44,6 +44,7 @@
 @import "components/menu";
 @import "components/navigation";
 @import "components/portfolio";
+@import "components/section";
 
 @import "layout/layout--single-short";
 @import "layout/layout--single-wide";
